[package]
name = "joe"
version = "0.1.0"
authors = ["chridou <chridou@users.noreply.github.com>"]

[lib]
name = "joe"
path = "src/lib.rs"

[[bin]]
name = "joe"
path = "src/bin.rs"

[dependencies]
log = "0.3"
diesel = "0.7"
diesel_codegen = { version = "0.7", default-features = false, features = ["postgres"] }
dotenv = "0.8"
dotenv_macros = "0.8"
