[package]
name = "joe"
version = "0.1.0"
authors = ["chridou <chridou@users.noreply.github.com>"]
build = "build.rs"

[lib]
name = "joe"
path = "src/lib.rs"

[[bin]]
name = "joe"
path = "src/bin.rs"

[build-dependencies]
syntex = { version = "0.44.0", optional = true }
diesel_codegen_syntex = { version = "0.8.0", features = ["postgres"], optional = true }
serde_codegen = { version = "0.8", optional = true }

[dependencies]
diesel = "0.8.0"
diesel_codegen = { version = "0.8.0", features = ["postgres"], optional = true }
dotenv = "0.8.0"
serde = "0.8"
serde_derive = { version = "0.8", optional = true }
serde_json = "0.8"

uuid = {version = "*", features = ["v4", "serde"] }

[features]
default = ["nightly"]
with-syntex = ["syntex", "diesel_codegen_syntex", "serde_codegen"]
nightly = ["diesel/unstable", "diesel_codegen", "serde_derive"]
